--- a/ArsaRExCH/Components/Pages/AdminPanel.razor
+++ b/ArsaRExCH/Components/Pages/AdminPanel.razor
@@ -67,7 +67,7 @@ else
 
     private string[] links = new string[]
     {
-        "BannedCountry", "UserInformation", "Add Pair", "BetListAdmin", "RoleManagerAdmin",
+        "BannedCountry", "UserInformation", "Pair", "BetListAdmin", "RoleManagerAdmin",
         "AirDropFaq", "AdminPost", "PoolAdmin", "BitcoinPoolOneUsers", "/SetupExchangeWallet",
         "/Coupon", "/page12", "/page13", "/page14", "/page15"
     };
